--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
