--- a/Ansible/inventory/inventory.ini
+++ b/Ansible/inventory/inventory.ini
@@ -1,5 +1,8 @@
+[all:vars]
+ansible_python_interpreter=/usr/bin/python3
+ansible_user=ubuntu
+ansible_ssh_private_key_file=~/Downloads/xinwu-key.pem
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+
 [all]
 172.26.132.123
-172.26.130.115
-172.26.133.12
-172.26.129.55
