--- a/Ansible/roles/openstack-instance/tasks/main.yaml
+++ b/Ansible/roles/openstack-instance/tasks/main.yaml
@@ -26,24 +26,7 @@
 - name: set ip addresses to /inventory/inventory.ini
   lineinfile:
     line: '{{ item.openstack.public_v4 }}'
-    insertafter: '[all]'
+    insertafter: '\[{{ item.openstack.name }}\]'
     dest: "{{project_directory}}/Ansible/inventory/inventory.ini"
   loop: '{{ os_instance.results }}'
   when: item.openstack is defined
-
-# - name: Wait for connection
-#   wait_for:
-#     host: "{{ item.openstack.public_v4 }}"
-#     port: 22
-#     timeout: 120
-#     search_regex: OpenSSH
-#   loop: '{{ os_instance.results }}'
-#   when: item.openstack is defined
-
-# Add hosts to Ansible in-memory inventory
-# - name: Add host
-#   add_host:
-#     name: '{{ item.openstack.public_v4 }}'
-#     groups: COMP90024
-#   loop: '{{ os_instance.results }}'
-#   when: item.openstack is defined
