--- a/Ansible/inventory/inventory.ini
+++ b/Ansible/inventory/inventory.ini
@@ -16,14 +16,14 @@ ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 [instance4]
 172.26.133.186
 
-[masternode]
-172.26.130.135
+[masternode:children]
+instance1
 
-[subnode1]
-172.26.131.97
+[subnode1:children]
+instance2
 
-[subnode2]
-172.26.131.121
+[subnode2:children]
+instance3
 
 [dbServers:children]
 dbMaster
