--- a/Ansible/inventory/inventory.ini
+++ b/Ansible/inventory/inventory.ini
@@ -1,7 +1,7 @@
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
 ansible_user=ubuntu
-ansible_ssh_private_key_file=~/Downloads/xinwu-key.pem
+ansible_ssh_private_key_file= xinwu-key.pem
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [instance1]
