--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,14 +4,14 @@ couchdb.database = test
 couchdb.username = admin
 couchdb.password = 961029
 
-
-
-server.port=80
+# 设置server.address=0.0.0.0 防止绑定到IPv6 !!! 妈个鸡 大坑，部署到服务器上的时候排查了很久
+server.address=0.0.0.0
+server.port=8080
 
 #server.servlet.context-path=/test
 
 # debug->info->warn->error->fatal
 #logging.level.root=debug
 
-debug=true
+#debug=true
 
