--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-couchdb.host = http://127.0.0.1
+couchdb.host = http://xinwu.site
 couchdb.port = 5984
-couchdb.database = test
+couchdb.database = mytest
 couchdb.username = admin
 couchdb.password = 961029
 
