--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-couchdb.host = http://xinwu.site
+#couchdb.host = http://xinwu.site
+couchdb.host = http://127.0.0.1
 couchdb.port = 5984
 couchdb.database = mytest
 couchdb.username = admin
