--- a/Ansible/roles/install-docker/tasks/main.yaml
+++ b/Ansible/roles/install-docker/tasks/main.yaml
@@ -64,7 +64,7 @@
 - name: change docker proxy | step 2
   become: yes
   copy:
-    content: "[Service]\nEnvironment=\"HTTP_PROXY={{ proxy_address }}\""
+    content: "[Service]\nEnvironment=\"HTTP_PROXY={{ proxy_address }}\"\nEnvironment=\"HTTPS_PROXY={{ https_proxy_address }}\"\nEnvironment=\"NO_PROXY={{ no_proxy }}\""
     dest: /etc/systemd/system/docker.service.d/http-proxy.conf
 
 # - name: change docker proxy | step 3
