--- a/Ansible/inventory/inventory.ini
+++ b/Ansible/inventory/inventory.ini
@@ -1,20 +1,20 @@
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
 ansible_user=ubuntu
-ansible_ssh_private_key_file= xinwu-key.pem
+ansible_ssh_private_key_file= ~/Downloads/xinwu-key.pem
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [instance1]
-172.26.130.135
+172.26.133.110
 
 [instance2]
-172.26.131.97
+172.26.131.27
 
 [instance3]
-172.26.131.121
+172.26.131.98
 
 [instance4]
-172.26.133.186
+172.26.134.51
 
 [masternode:children]
 instance1
