--- a/Ansible/inventory/inventory.ini
+++ b/Ansible/inventory/inventory.ini
@@ -25,13 +25,13 @@ instance2
 [subnode2:children]
 instance3
 
-[dbServers:children]
-dbMaster
-dbSlave
+; [dbServers:children]
+; dbMaster
+; dbSlave
 
-[dbMaster:children]
-instance1
+; [dbMaster:children]
+; instance1
 
-[dbSlave:children]
-instance2
-instance3
+; [dbSlave:children]
+; instance2
+; instance3
