--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #couchdb.host = http://xinwu.site
-couchdb.host = http://127.0.0.1
+couchdb.host = http://172.26.133.110
 couchdb.port = 5984
-couchdb.database = mytest
+couchdb.database = twitter
 couchdb.username = admin
-couchdb.password = 961029
+couchdb.password = 123456
 
 # 设置server.address=0.0.0.0 防止绑定到IPv6 !!! 妈个鸡 大坑，部署到服务器上的时候排查了很久
 server.address=0.0.0.0
