--- a/Ansible/host_vars/nectar.yaml
+++ b/Ansible/host_vars/nectar.yaml
@@ -102,3 +102,9 @@ security_groups:
     port_range_min: 9000
     port_range_max: 9000
     remote_ip_prefix: 0.0.0.0/0
+  - name: backend
+    description: "backend"
+    protocol: tcp
+    port_range_min: 8080
+    port_range_max: 8080
+    remote_ip_prefix: 0.0.0.0/0
