--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
+    "fusioncharts": "^3.15.1-sr.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fusioncharts": "^3.1.2",
     "react-google-maps": "^9.4.5",
-    "react-popper": "^2.2.2",
-    "react-router-dom": "^5.1.2",
+    "react-popper": "^2.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
     "recharts": "^1.8.5",
