--- a/Ansible/host_vars/nectar.yaml
+++ b/Ansible/host_vars/nectar.yaml
@@ -108,3 +108,9 @@ security_groups:
     port_range_min: 8080
     port_range_max: 8080
     remote_ip_prefix: 0.0.0.0/0
+  - name: redis
+    description: "redis"
+    protocol: tcp
+    port_range_min: 6379
+    port_range_max: 6379
+    remote_ip_prefix: 0.0.0.0/0
