config to use cluster redis

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,6 +16,10 @@ server.port=8080
 
 #debug=true
 
-spring.redis.database=0
-spring.redis.host=172.26.134.51
-spring.redis.port=6379
+# single
+#spring.redis.database=0
+#spring.redis.host=172.26.134.51
+#spring.redis.port=6379
+
+# redis cluster
+spring.redis.cluster.nodes=172.26.134.51:6379,172.26.131.98:6379,172.26.131.27:6379
