--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
     "recharts": "^1.8.5",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
