--- a/Ansible/inventory/inventory.ini
+++ b/Ansible/inventory/inventory.ini
@@ -25,6 +25,15 @@ instance3
 [subnode2:children]
 instance4
 
+[redisCluster:children]
+instance2
+instance3
+instance4
+
+[backend:children]
+instance3
+instance4
+
 ; [dbServers:children]
 ; dbMaster
 ; dbSlave
