--- a/Ansible/roles/redis-cluster/tasks/redis.conf
+++ b/Ansible/roles/redis-cluster/tasks/redis.conf
@@ -4,4 +4,4 @@ cluster-enabled  yes
 cluster-config-file  nodes_6379.conf
 cluster-node-timeout  5000
 appendonly  yes
-bind 0.0.0.0
+protected-mode no
