--- a/Ansible/roles/nginx-frontend/tasks/nginx.conf
+++ b/Ansible/roles/nginx-frontend/tasks/nginx.conf
@@ -25,37 +25,13 @@ http {
         
 
         location / {
+            try_files $uri $uri/ /index.html;
             root   /usr/share/nginx/html;
             index  index.html index.htm;
         }
         location /api {
             proxy_pass http://backend;
         }
-    }
-
-
-    server {
-        listen       80;
-        server_name  172.26.131.6;
-
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-        }
-
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-    }
-    
+    }  
     include servers/*;
 }
