--- a/Ansible/DeployAllApplications.yaml
+++ b/Ansible/DeployAllApplications.yaml
@@ -1,18 +1,18 @@
-# - hosts: all
-#   vars_files:
-#     - host_vars/remote.yaml
-#   gather_facts: true
+- hosts: all
+  vars_files:
+    - host_vars/remote.yaml
+  gather_facts: true
 
-#   roles:
-#     - role: netdata-instance-visualization
+  roles:
+    - role: netdata-instance-visualization
 
-# - hosts: masternode
-#   vars_files:
-#     - host_vars/remote.yaml
-#   gather_facts: true
+- hosts: masternode
+  vars_files:
+    - host_vars/remote.yaml
+  gather_facts: true
 
-#   roles:
-#     - role: MapReduce_Setting
+  roles:
+    - role: MapReduce_Setting
 
 - hosts: redisCluster
   vars_files:
@@ -22,18 +22,18 @@
   roles:
     - redis-cluster
 
-# - hosts: backend
-#   vars_files:
-#     - host_vars/remote.yaml
-#   gather_facts: true
+- hosts: backend
+  vars_files:
+    - host_vars/remote.yaml
+  gather_facts: true
 
-#   roles:
-#     - backend
+  roles:
+    - backend
 
-# - hosts: instance1
-#   vars_files:
-#     - host_vars/remote.yaml
-#   gather_facts: true
+- hosts: instance1
+  vars_files:
+    - host_vars/remote.yaml
+  gather_facts: true
 
-#   roles:
-#     - nginx-frontend
+  roles:
+    - nginx-frontend
